<resources>
    <string name="app_name">GoSky</string>

    <string name="main_help_button_contentDescription">Help</string>
    <string name="main_setting_button_contentDescription">Setting</string>
    <string name="main_play_button_contentDescription">Play</string>

    <string name="help_back_button_contentDescription">Back</string>
    <string name="help_prev_page_button">Previous Page</string>
    <string name="help_next_page_button">Next Page</string>

    <string name="setting_back_button_contentDescription">Back</string>
    <string name="setting_first_header_title">FLIGHT ATTITUDE PARAMETERS</string>
    <string name="setting_first_section_first_row_title">Parameters auto save</string>
    <string name="setting_first_section_second_row_title">Reset the parameters</string>
    <string name="setting_second_header_title">INTERFACE SETTINGS</string>
    <string name="setting_second_section_first_row_title">Right hand mode</string>
    <string name="setting_third_header_title">WIRELESS SETTINGS</string>
    <string name="setting_third_section_first_row_title">Rename SSID</string>
    <!---->
    <string name="setting_alert_reset_parameter_success">Reset parameters success</string>

    <string name="rename_ssid_cancel_button">Cancel</string>
    <string name="rename_ssid_save_button">Save</string>
    <string name="rename_ssid_current_ssid_textView">Current SSID</string>
    <string name="rename_ssid_new_ssid_textView">New SSID</string>
    <string name="rename_ssid_new_ssid_hint">Input new SSID here</string>
    <string name="rename_ssid_text_filter">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789_</string>
    <string name="rename_ssid_notice_textView">Please use only “A&#8211;Z”, “a&#8211;z”, “0&#8211;9”, and “_”, and 24 characters at most</string>
    <!---->
    <string name="rename_hud_applying_change">Applying changes</string>
    <string name="rename_hud_resetting_board">Resetting board</string>
    <string name="rename_hud_collecting_information">Collecting information</string>
    <string name="rename_alert_get_info_fail">Failed to get info</string>
    <string name="rename_alert_set_ssid_fail">Failed to set SSID</string>
    <string name="rename_alert_reset_fail">Failed to reset board</string>
    <string name="rename_error_get_info">Error occurred while getting Info</string>
    <string name="rename_error_set_ssid">Error occurred while setting SSID</string>
    <string name="rename_error_reset">Error occurred while resetting board</string>
    <string name="rename_message_box_reset_title">Notice</string>
    <string name="rename_message_box_reset_message">Reset successfully.\r\nOpen WiFi settings page to connect to new SSID?</string>
    <string name="rename_message_box_positive_title">Yes</string>
    <string name="rename_message_box_negative_title">No</string>
    <string name="rename_alert_change_another_ssid">Please type a different SSID with the current one</string>
    <!---->
    <string name="rename_message_box_notice_title">Notice</string>
    <string name="rename_message_box_notice_message">Set SSID successfully.\r\nPlease turn the device off and on,\r\nthen wait half a minute to take effect.</string>
    <string name="rename_message_box_notice_confirm_title">OK</string>
    <string name="rename_message_box_notice2_title">Notice</string>
    <string name="rename_message_box_notice2_message">Open WiFi settings page to connect to new SSID?</string>
    <string name="rename_message_box_notice2_positive_title">Yes</string>
    <string name="rename_message_box_notice2_negative_title">No</string>
    <string name="rename_message_box_notice3_title">Notice</string>
    <string name="rename_message_box_notice3_message">Cannot jump to WiFi settings page automaticlly, please open it manually to connect to new SSID.</string>
    <string name="rename_message_box_notice3_confirm_title">OK</string>

    <string name="control_panel_alert_save_photo_success">Photo is saved to&#160;</string>
    <string name="control_panel_alert_save_photo_fail">Failed to save photo</string>
    <string name="control_panel_alert_start_record_video">Start recording video</string>
    <string name="control_panel_alert_record_video_success">Video is saved to&#160;</string>
    <string name="control_panel_alert_record_video_fail">Failed to record video</string>
    <string name="control_panel_alert_not_enough_disk_space">Not enough disk space, stop recording</string>
    <string name="control_panel_alert_write_video_file_error">Error occurred while Writing video file, stop recording.\r\nVideo is saved to&#160;</string>
    <!---->
    <string name="control_panel_alert_not_support_gyro">This phone don\'t support this feature</string>

    <string name="control_panel_voice_guide">Voice Control: Forward, Backward, Left, Right, Takeoff, Landing</string>

    <string name="control_panel_insufficient_storage_alert">Insufficient storage(%.2fMB), cannot start recording video</string>

    <string name="media_list_empty_list">Media directory is empty or not exist</string>
    <string name="media_list_delete_button">Delete</string>
    <string name="media_list_cancel_button">Cancel</string>
    <string name="media_list_delete_button_highlight_format">Delete(%d)</string>

    <!-- ijk -->
    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>

    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>

</resources>
