<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/home_bg"
    tools:context="cn.com.buildwin.gosky.activities.HomeActivity"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="bottom|start">

        <ImageButton
            android:id="@+id/home_help_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="33dp"
            android:layout_marginRight="13dp"
            android:layout_marginBottom="16dp"
            android:src="@mipmap/home_help"
            android:background="#00000000"
            android:contentDescription="@string/main_help_button_contentDescription"/>

        <ImageButton
            android:id="@+id/home_setting_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginBottom="16dp"
            android:src="@mipmap/home_settings"
            android:background="#00000000"
            android:contentDescription="@string/main_setting_button_contentDescription"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/aircraft"
            android:background="#00000000"
            android:layout_gravity="top|right"
            android:layout_marginTop="33dp"
            android:layout_marginRight="33dp"/>

        <ImageButton
            android:id="@+id/home_play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/home_play"
            android:background="#00000000"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="33dp"
            android:contentDescription="@string/main_play_button_contentDescription"/>

    </FrameLayout>

</LinearLayout>
